--- a/css/style.css
+++ b/css/style.css
@@ -7,19 +7,25 @@
 /* DEBUG */
 
 .debug-logo {
-    background-color: #daa520;
+    background-colors: #daa520;
 }
 
 .debug-ul {
-    background-color: #daa520;
+    background-colors: #daa520;
 }
 
 .debug-login {
-    background-color: #daa520;
+    background-colors: #daa520;
 }
 
 /* DEBUG */
 
+/* ******** */
+* {
+    font-family: 'Roboto', sans-serif;
+    color: white;
+
+}
 
 /* HEADER */
 header {
@@ -27,6 +33,7 @@ header {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    font-size: 15px;
 }
 
 header>section {
@@ -50,20 +57,16 @@ header>section {
 
 
 .logo1 {
-    border-style: dashed;
-    border-width: 1px;
     min-height: 40px;
     display: flex;
     align-items: center;
     padding-left: 10px;
-    width: 20%;
+    width: 70px;
 }
 
 
 .ul {
     list-style: none;
-    border-style: dashed;
-    border-width: 1px;
     display: flex;
     justify-content: center;
     min-height: 40px;
@@ -73,14 +76,14 @@ header>section {
 }
 
 .login {
-    border-style: dashed;
-    border-width: 1px;
-    min-height: 40px;
+    min-height: 30px;
     display: flex;
     justify-content: end;
     align-items: center;
-    padding-right: 10px;
-    width: 20%;
+    padding: 0 17px ;    
+    background-color: white;
+    color: black;
+    border-radius: 20px;
 
 }
 
@@ -96,16 +99,46 @@ header>section {
 
 #box1 {
     min-height: 400px;
-    background-color: #ee82ee;
+    background-colors: #ee82ee;
     width: 900px;
-    border-style: dashed;
-    border-width: 1px;
 }
 
-.div1 {
-    height: 3px;
-    background-color: aqua;
+#section-header {
+    display: flex;
+    flex-direction: column;
 }
+
+header section h1 {
+    font-size: 45px;
+    text-align: center;
+    padding: 45px 0;
+}
+
+header #section-header div {
+    text-align: center;
+    line-height: 31px;
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+header #section-header span {
+    font-size: 18px;
+    text-align: center;
+    margin: 20px 10px;
+    padding: 13px 15px;
+    border-radius: 20px;
+}
+
+#span1 {
+    background-color: white;
+    color: black;
+}
+
+#span2 {
+    background-color: #23272a;
+}
+
+
 
 /* HEADER */
 
