--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@ footer {
 }
 
 .bigbox4 {
-    width: 95%;
+    width: 1200px;
     display: flex;
     align-items: center;
     justify-content: space-around;
